--- a/index.html
+++ b/index.html
@@ -358,15 +358,17 @@ employés</h1>
 </div>
 
 
-<div id="introdution" class="section level2">
-<h2>Introdution</h2>
-<p>This is an R Markdown document. Markdown is a simple formatting
-syntax for authoring HTML, PDF, and MS Word documents. For more details
-on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>When you click the <strong>Knit</strong> button a document will be
-generated that includes both content as well as the output of any
-embedded R code chunks within the document. You can embed an R code
-chunk like this:</p>
+<div id="mise-en-contexte" class="section level2">
+<h2>Mise en contexte</h2>
+<p>Il s’agit dans ce travail de prédire les clients qui quitteront la
+compagnie (churn) à partir de trois types de variables explicatives:
+variables de comportement comme le nombre de minutes utilisé, le type
+d’équipement; l’interaction avec la compagnie comme les appels au
+service à la clientèle; et des données démographiques. Les variables et
+la tâche à accomplir sont typiques de cette industrie. Même si les
+données pour ce travail ont été recueillies il y a plusieurs années,
+elles sont représentatives des mandats d’exploitation de données pour la
+rétention des clients.</p>
 <pre class="r"><code>summary(cars)</code></pre>
 <pre><code>##      speed           dist       
 ##  Min.   : 4.0   Min.   :  2.00  
